--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "axios": "0.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "5.3.3",
-    "axios": "0.24.0"
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
-    "typescript": "4.5.2",
-    "parcel": "2.0.1",
     "@types/react": "17.0.36",
     "@types/react-dom": "17.0.11",
-    "@types/styled-components": "5.1.15"
+    "@types/styled-components": "5.1.15",
+    "parcel": "2.0.1",
+    "typescript": "4.5.2"
   }
 }
