--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "contact",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "parcel src/index.html --port 3000",
-    "prebuild": "rm -rf dist/",
-    "build": "COMMIT_REF=$(git show -s --format=%h) parcel build src/index.html"
-  },
-  "browserslist": {
-    "production": [
-      "last 5 chrome version",
-      "last 5 firefox version",
-      "last 5 safari version"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "parcel-namer-assets": "link:./parcel-namer",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "axios": "0.24.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.3.3"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.36",
-    "@types/react-dom": "17.0.11",
-    "@types/styled-components": "5.1.15",
-    "parcel": "2.0.1",
-    "typescript": "4.5.2"
-  }
+    "name": "contact",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "parcel src/index.html --port 3000",
+        "prebuild": "rm -rf dist/",
+        "build": "COMMIT_REF=$(git show -s --format=%h) parcel build src/index.html",
+        "lint": "eslint -c .eslintrc.json --ext .ts ./src"
+    },
+    "browserslist": {
+        "production": [
+            "last 5 chrome version",
+            "last 5 firefox version",
+            "last 5 safari version"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-regular-svg-icons": "^5.15.4",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
+        "axios": "0.24.0",
+        "parcel-namer-assets": "link:./parcel-namer",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "styled-components": "5.3.3"
+    },
+    "devDependencies": {
+        "@types/react": "17.0.36",
+        "@types/react-dom": "17.0.11",
+        "@types/styled-components": "5.1.15",
+        "@typescript-eslint/parser": "^5.10.2",
+        "eslint": "^8.8.0",
+        "eslint-plugin-antony": "^1.2.11",
+        "parcel": "2.0.1",
+        "typescript": "^4.5.5"
+    }
 }
